# etl-pipeline

./: .coveragerc  .gitignore  .prefectignore  README.md  prefect.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: run-tox.yml  trigger_etl_action.yml  trigger_update_zipcodes_action.yml
etl/: constants.py  db_utilities.py  etl_ml_flow.py  etl_pipeline.py  fetch_properties_and_assessments_from_open_ny.py  hello_world.py  log_utilities.py  property_utilities.py  rate_limits.py  update_property_zipcodes.py  update_zipcodes_from_cache.py  update_zipcodes_from_census_bureau.py  update_zipcodes_from_open_addresses.py  validation_models.py
etl/open_ny_apis/: fetch_municipality_assessment_ratios.py  municipality_assessment_ratios.py  property_assessments.py
etl/zillow_datasets/: zillow_datasets.py  zillow_zhvi_sfh.py
research/: research_open_ny_get_metadata.py
research/attom_api/: sample_attom_apis.py
research/open_ny_metadata/: assessment_ratios.csv  (+6 more)
sql/: create_table_definitions.sql
tests/: test_data_import_pipeline.py  test_db_utilities.py  test_db_utilities_execute_select_query.py  test_db_utilities_insert_into_database.py  test_etl_ml_flow.py  test_etl_pipeline.py  test_fetch_municipality_assessment_ratios.py  test_fetch_properties_and_assessments_from_open_ny.py  test_hello_world.py  test_insert_into_database.py  test_log_utilities.py  test_property_utilities.py  test_rate_per_minute.py  test_update_zipcodes_from_cache.py  test_update_zipcodes_from_census_bureau.py  test_validation_models.py  test_zillow_zhvi_sfh.py
