[project]
name = "etl-pipeline"
version = "0.1.0"
description = "ETL pipeline to import data for use in CNY realestate anaylytics app. Part of capstone project for BS in computer science."
authors = [
    {name = "Michelle Mark"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "backoff (>=2.2.1,<3.0.0)",
    "boto3 (>=1.37.13,<2.0.0)",
    "ijson (>=3.3.0,<4.0.0)",
    "limits (>=4.4.1,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sodapy (>=2.2.0,<3.0.0)"
]

[tool.poetry]
package-mode = true
packages = [{ include = "etl" }]

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.12"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
tox = "^4.24.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
